# tunmux

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  flake.nix
.github/workflows/: ci-android.yml  ci.yml  docker-publish.yml  docker.yml  manual-build-android.yml  manual-build.yml  release.yml
android/: 10G.iso.aria2  build.gradle.kts  gradle.properties  settings.gradle.kts  smoke_keystore_check.py
android/app/: build.gradle.kts
android/app/src/androidTest/kotlin/net/tunmux/: CredentialBridgeTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/net/tunmux/: AutoTunnelService.kt  BootCompletedReceiver.kt  CredentialBridge.kt  KeystoreCredentials.kt  LifecycleVpnService.kt  MainActivity.kt  RustBridge.kt  StitchUi.kt  TunmuxVpnService.kt
android/app/src/main/kotlin/net/tunmux/model/: AndroidNetworkMonitor.kt  AppConfigStore.kt  AutoRuntimeStore.kt  AutoTunnelDecider.kt  NetworkAutoTunnelResolver.kt  VpnViewModel.kt
android/app/src/main/kotlin/net/tunmux/ui/theme/: Color.kt  Size.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/: libs.versions.toml
android/rust-lib/: Cargo.toml
android/rust-lib/src/: lib.rs
nix/: android-devshell.nix  android-env.nix  android-toolchain.nix  common-toolchain.nix
scripts/: ci.sh  proton_stability_bench.sh
src/: cli.rs  config.rs  error.rs  lib.rs  local_proxy.rs  logging.rs  main.rs  netns.rs  netns_stub.rs  privileged.rs  privileged_api.rs  privileged_client.rs  proxy_stub.rs  userspace_helper.rs
src/airvpn/: api.rs  crypto.rs  handlers.rs  mod.rs  models.rs  web.rs
src/api/: auth.rs  certificate.rs  http.rs  mod.rs  servers.rs  vpn_info.rs
src/crypto/: keys.rs
src/ivpn/: api.rs  handlers.rs  mod.rs
src/models/: server.rs  session.rs
src/mullvad/: api.rs  handlers.rs
src/proton/: handlers.rs  mod.rs
src/proton/api/: auth.rs  certificate.rs  servers.rs  srp.rs  vpn_info.rs
src/proton/models/: server.rs  session.rs
src/proxy/: daemon.rs  dns.rs  http.rs  mod.rs  socks5.rs
src/shared/: connection_ops.rs  hooks.rs  latency.rs  mod.rs  util.rs
src/shared/credential_store/: android.rs  file.rs  keyring.rs  mod.rs
src/shared/crypto/: keys.rs
src/wgconf/: handlers.rs  mod.rs
src/wireguard/: backend.rs  config.rs  connection.rs  handshake.rs  kernel.rs  mod.rs  netlink.rs  proxy_tunnel.rs  userspace.rs  wg_quick.rs
systemd/: tunmux-privileged.service  tunmux-privileged.socket
