[package]
name = "tunmux"
version = "0.1.0"
edition = "2021"

[features]
default = ["proxy"]
proxy = []
keyring = ["dep:keyring"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
log = "0.4"
tracing = "0.1"
tracing-appender = "0.2"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "time"] }
time = { version = "0.3", features = ["macros"] }

# Crypto - SRP
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num-integer = "0.1"
sha2 = "0.10"
bcrypt = "0.16"
hmac = "0.12"

# Crypto - Keys
ed25519-dalek = { version = "2", features = ["rand_core"] }
curve25519-dalek = "4"
rand = "0.8"

# Encoding
base64 = "0.22"

# Crypto - AirVPN API
rsa = { version = "0.9", features = ["std"] }
aes = "0.8"
cbc = "0.1"

# HTML parsing
scraper = "0.22"

# Cookie persistence
reqwest_cookie_store = "0.8"
cookie = "0.18"

# XML parsing
roxmltree = "0.20"

# Password input
rpassword = "7"

# Error handling
thiserror = "2"
anyhow = "1"

# Linux namespaces
nix = { version = "0.29", features = ["sched", "net", "fs", "signal", "process", "user", "mount"] }

# Keyring (optional)
keyring = { version = "3", optional = true }

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
gotatun = { version = "0.2.0", features = ["device", "tun"] }
